@@ -216,6 +216,7 @@ machine_select_machine( fuse_machine_info *machine )
 
   /* Reset the event stack */
   event_reset();
+  if( event_add( 0, EVENT_TYPE_TIMER ) ) return 1;
   if( event_add( machine->timings.tstates_per_frame, EVENT_TYPE_FRAME ) )
     return 1;
 
